# marks-content-agent

./: .env.example  .gitignore  Dockerfile  Procfile  pyproject.toml  railway.toml  requirements.txt
claude/plans/: content-agent-impimentation-plan.md  conversational-slack-bot.md  iterative-content-drafting.md  media-generation.md
context/: marks_context.md
context/brand/: style_guide.md
database/: schema.sql
src/: __init__.py  cli.py  config.py  main.py
src/agent/: __init__.py  generator.py  prompts.py  relevance.py  variety.py
src/integrations/: __init__.py  slack.py  slack_bot.py  twitter.py
src/models/: __init__.py  content.py
src/monitors/: __init__.py  rss_monitor.py  twitter_monitor.py
src/services/: __init__.py  account_service.py  database.py  feedback_service.py  history_service.py  image_service.py  imagen.py  intent_parser.py  marks_api.py  rss_service.py  tweet_service.py  voice_sampler.py
